# Image_processing_microservice

./: .gitignore  LICENSE  README.md
api_gateway/: Cargo.toml
api_gateway/proto/: gateway.proto
api_gateway/src/: api_gateway.rs
client/: Cargo.toml  Config-demo.toml  build.rs
client/proto/: api.proto
client/src/: main.rs  middleware.rs
grayscale_service/: Cargo.toml
pixelate_service/: Cargo.toml
pixelate_service/src/: main.rs  pixelate_service.rs
server/api_gateway/: Cargo.toml  Config-demo.toml  build.rs
server/api_gateway/proto/: api.proto  image_processing.proto
server/api_gateway/src/: api_gateway.rs  main.rs  middleware.rs
server/ascii_service/: Cargo.toml  Config-demo.toml  build.rs
server/ascii_service/proto/: image_processing.proto
server/ascii_service/src/: ascii_service.rs  main.rs
server/blur_service/: Cargo.toml  Config-demo.toml
server/blur_service/proto/: image_processing.proto
server/blur_service/src/: blur_service.rs  main.rs
server/grayscale_service/: Cargo.toml  Config-demo.toml  build.rs
server/grayscale_service/proto/: image_processing.proto
server/grayscale_service/src/: grayscale_service.rs  main.rs  middleware.rs
server/pixelate_service/: Cargo.toml  Config-demo.toml
server/pixelate_service/proto/: image_processing.proto
server/pixelate_service/src/: main.rs  pixelate_service.rs
server/resize_service/: Cargo.toml  Config-demo.toml
server/resize_service/proto/: image_processing.proto
server/resize_service/src/: main.rs  resize_service.rs
server/storage_service/: Cargo.toml  build.rs
server/storage_service/proto/: storage_service.proto
server/storage_service/src/: main.rs  storage_service.rs
