[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
config = "0.13.3"
image = "0.24.6"
prost = "0.11.9"
tokio = {version = "1.28.0", features = ["full"]}
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
