[package]
edition = "2021"
name = "api_gateway"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
prost = "0.11.9"
tokio = {version = "1.28.0", features = ["full"]}
tonic = {version = "0.9.2", features = ["tls"]}
tower = "0.4.13"
# serde = {version = "1.0.163", features = ["derive"]k}

[build-dependencies]
tonic-build = "0.9.2"
