[package]
edition = "2021"
name = "storage_service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
jsonwebtoken = "8.3.0"
mysql = "24.0.0"
prost = "0.11.9"
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["full"]}
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
